gen/SessionTypeParser.py
# Generated from /Users/lorenzobacchiani/Desktop/session-subtyping-tool/SessionType.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SessionTypeParser ( Parser ):

    grammarFileName = "SessionType.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'+'", "'{'", "'}'", "'['", "']'", "';'", 
                     "','", "'.'", "'&'", "'rec'", "'end'", "'!'", "'?'" ]

    symbolicNames = [ "<INVALID>", "PLUS", "CLPAR", "CRPAR", "SLPAR", "SRPAR", 
                      "SEMIC", "COMMA", "DOT", "AND", "REC", "END", "OUT", 
                      "IN", "ID", "WHITESP" ]

    RULE_start = 0
    RULE_stype = 1
    RULE_guarded = 2

    ruleNames =  [ "start", "stype", "guarded" ]

    EOF = Token.EOF
    PLUS=1
    CLPAR=2
    CRPAR=3
    SLPAR=4
    SRPAR=5
    SEMIC=6
    COMMA=7
    DOT=8
    AND=9
    REC=10
    END=11
    OUT=12
    IN=13
    ID=14
    WHITESP=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None
            self.s = None # StypeContext

        def EOF(self):
            return self.getToken(SessionTypeParser.EOF, 0)

        def stype(self):
            return self.getTypedRuleContext(SessionTypeParser.StypeContext,0)


        def getRuleIndex(self):
            return SessionTypeParser.RULE_start




    def start(self):

        localctx = SessionTypeParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 6
            localctx.s = self.stype()
            localctx.type = localctx.s.type if localctx.s.type is not None else ""
            self.state = 8
            self.match(SessionTypeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None
            self.i = None # Token
            self.s = None # Token
            self.st = None # StypeContext
            self.c = None # Token
            self.i2 = None # Token
            self.s2 = None # Token
            self.st2 = None # StypeContext
            self.r = None # Token
            self.d = None # Token
            self.g = None # GuardedContext
            self.e = None # Token
            self.o = None # Token
            self.sl = None # Token
            self.o2 = None # Token
            self.sr = None # Token
            self.n = None # Token
            self.n2 = None # Token

        def PLUS(self):
            return self.getToken(SessionTypeParser.PLUS, 0)

        def CLPAR(self):
            return self.getToken(SessionTypeParser.CLPAR, 0)

        def CRPAR(self):
            return self.getToken(SessionTypeParser.CRPAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.ID)
            else:
                return self.getToken(SessionTypeParser.ID, i)

        def SEMIC(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.SEMIC)
            else:
                return self.getToken(SessionTypeParser.SEMIC, i)

        def stype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SessionTypeParser.StypeContext)
            else:
                return self.getTypedRuleContext(SessionTypeParser.StypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.COMMA)
            else:
                return self.getToken(SessionTypeParser.COMMA, i)

        def AND(self):
            return self.getToken(SessionTypeParser.AND, 0)

        def REC(self):
            return self.getToken(SessionTypeParser.REC, 0)

        def DOT(self):
            return self.getToken(SessionTypeParser.DOT, 0)

        def guarded(self):
            return self.getTypedRuleContext(SessionTypeParser.GuardedContext,0)


        def END(self):
            return self.getToken(SessionTypeParser.END, 0)

        def OUT(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.OUT)
            else:
                return self.getToken(SessionTypeParser.OUT, i)

        def SLPAR(self):
            return self.getToken(SessionTypeParser.SLPAR, 0)

        def SRPAR(self):
            return self.getToken(SessionTypeParser.SRPAR, 0)

        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.IN)
            else:
                return self.getToken(SessionTypeParser.IN, i)

        def getRuleIndex(self):
            return SessionTypeParser.RULE_stype




    def stype(self):

        localctx = SessionTypeParser.StypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stype)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 10
                self.match(SessionTypeParser.PLUS)
                self.state = 11
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 13
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 14
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 15
                localctx.st = self.stype()
                localctx.type += "!" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 17
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 18
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 19
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 20
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "!" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 27
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 29
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.match(SessionTypeParser.AND)
                self.state = 32
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 34
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 35
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 36
                localctx.st = self.stype()
                localctx.type += "?" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 38
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 39
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 40
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 41
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "?" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 48
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 50
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                localctx.r = self.match(SessionTypeParser.REC)
                self.state = 53
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 54
                localctx.d = self.match(SessionTypeParser.DOT)
                self.state = 55
                localctx.g = self.guarded()
                localctx.type = (None if localctx.r is None else localctx.r.text) + " V" + (None if localctx.i is None else localctx.i.text) + " " + (None if localctx.d is None else localctx.d.text) + (localctx.g.type if not localctx.g.type == None else "")
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                localctx.i = self.match(SessionTypeParser.ID)
                localctx.type = "V" + (None if localctx.i is None else localctx.i.text)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                localctx.e = self.match(SessionTypeParser.END)
                localctx.type = (None if localctx.e is None else localctx.e.text)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 63
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 64
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 65
                localctx.st = self.stype()
                localctx.type = (None if localctx.o is None else localctx.o.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                localctx.sl = self.match(SessionTypeParser.SLPAR)
                self.state = 69
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 70
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 71
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 72
                localctx.st = self.stype()
                localctx.type = (None if localctx.sl is None else localctx.sl.text) + (None if localctx.o is None else localctx.o.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 74
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 75
                    localctx.o2 = self.match(SessionTypeParser.OUT)
                    self.state = 76
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 77
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 78
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + (None if localctx.o2 is None else localctx.o2.text) + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                localctx.sr = self.match(SessionTypeParser.SRPAR)
                localctx.type += (None if localctx.sr is None else localctx.sr.text)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 89
                localctx.n = self.match(SessionTypeParser.IN)
                self.state = 90
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 91
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 92
                localctx.st = self.stype()
                localctx.type = (None if localctx.n is None else localctx.n.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                localctx.sl = self.match(SessionTypeParser.SLPAR)
                self.state = 96
                localctx.n = self.match(SessionTypeParser.IN)
                self.state = 97
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 98
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 99
                localctx.st = self.stype()
                localctx.type = (None if localctx.sl is None else localctx.sl.text) + (None if localctx.n is None else localctx.n.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 101
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 102
                    localctx.n2 = self.match(SessionTypeParser.IN)
                    self.state = 103
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 104
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 105
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + (None if localctx.n2 is None else localctx.n2.text) + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                localctx.sr = self.match(SessionTypeParser.SRPAR)
                localctx.type += (None if localctx.sr is None else localctx.sr.text)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GuardedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type = None
            self.i = None # Token
            self.s = None # Token
            self.st = None # StypeContext
            self.c = None # Token
            self.i2 = None # Token
            self.s2 = None # Token
            self.st2 = None # StypeContext
            self.r = None # Token
            self.d = None # Token
            self.g = None # GuardedContext
            self.e = None # Token
            self.o = None # Token
            self.sl = None # Token
            self.o2 = None # Token
            self.sr = None # Token
            self.n = None # Token
            self.n2 = None # Token

        def PLUS(self):
            return self.getToken(SessionTypeParser.PLUS, 0)

        def CLPAR(self):
            return self.getToken(SessionTypeParser.CLPAR, 0)

        def CRPAR(self):
            return self.getToken(SessionTypeParser.CRPAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.ID)
            else:
                return self.getToken(SessionTypeParser.ID, i)

        def SEMIC(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.SEMIC)
            else:
                return self.getToken(SessionTypeParser.SEMIC, i)

        def stype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SessionTypeParser.StypeContext)
            else:
                return self.getTypedRuleContext(SessionTypeParser.StypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.COMMA)
            else:
                return self.getToken(SessionTypeParser.COMMA, i)

        def AND(self):
            return self.getToken(SessionTypeParser.AND, 0)

        def REC(self):
            return self.getToken(SessionTypeParser.REC, 0)

        def DOT(self):
            return self.getToken(SessionTypeParser.DOT, 0)

        def guarded(self):
            return self.getTypedRuleContext(SessionTypeParser.GuardedContext,0)


        def END(self):
            return self.getToken(SessionTypeParser.END, 0)

        def OUT(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.OUT)
            else:
                return self.getToken(SessionTypeParser.OUT, i)

        def SLPAR(self):
            return self.getToken(SessionTypeParser.SLPAR, 0)

        def SRPAR(self):
            return self.getToken(SessionTypeParser.SRPAR, 0)

        def IN(self, i:int=None):
            if i is None:
                return self.getTokens(SessionTypeParser.IN)
            else:
                return self.getToken(SessionTypeParser.IN, i)

        def getRuleIndex(self):
            return SessionTypeParser.RULE_guarded




    def guarded(self):

        localctx = SessionTypeParser.GuardedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_guarded)
        self._la = 0 # Token type
        try:
            self.state = 222
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(SessionTypeParser.PLUS)
                self.state = 119
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 121
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 122
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 123
                localctx.st = self.stype()
                localctx.type += "!" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 125
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 126
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 127
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 128
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "!" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 137
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(SessionTypeParser.AND)
                self.state = 140
                self.match(SessionTypeParser.CLPAR)
                localctx.type = "["
                self.state = 142
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 143
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 144
                localctx.st = self.stype()
                localctx.type += "?" + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 146
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 147
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 148
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 149
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + "?" + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                localctx.type += "]"
                self.state = 158
                self.match(SessionTypeParser.CRPAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 160
                localctx.r = self.match(SessionTypeParser.REC)
                self.state = 161
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 162
                localctx.d = self.match(SessionTypeParser.DOT)
                self.state = 163
                localctx.g = self.guarded()
                localctx.type = (None if localctx.r is None else localctx.r.text) + " V" + (None if localctx.i is None else localctx.i.text) + " " + (None if localctx.d is None else localctx.d.text) + (localctx.g.type if not localctx.g.type == None else "")
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                localctx.e = self.match(SessionTypeParser.END)
                localctx.type = (None if localctx.e is None else localctx.e.text)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 169
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 170
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 171
                localctx.st = self.stype()
                localctx.type = (None if localctx.o is None else localctx.o.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 174
                localctx.sl = self.match(SessionTypeParser.SLPAR)
                self.state = 175
                localctx.o = self.match(SessionTypeParser.OUT)
                self.state = 176
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 177
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 178
                localctx.st = self.stype()
                localctx.type = (None if localctx.sl is None else localctx.sl.text) + (None if localctx.o is None else localctx.o.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 180
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 181
                    localctx.o2 = self.match(SessionTypeParser.OUT)
                    self.state = 182
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 183
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 184
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + (None if localctx.o2 is None else localctx.o2.text) + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 191
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 192
                localctx.sr = self.match(SessionTypeParser.SRPAR)
                localctx.type += (None if localctx.sr is None else localctx.sr.text)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 195
                localctx.n = self.match(SessionTypeParser.IN)
                self.state = 196
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 197
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 198
                localctx.st = self.stype()
                localctx.type = (None if localctx.n is None else localctx.n.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 201
                localctx.sl = self.match(SessionTypeParser.SLPAR)
                self.state = 202
                localctx.n = self.match(SessionTypeParser.IN)
                self.state = 203
                localctx.i = self.match(SessionTypeParser.ID)
                self.state = 204
                localctx.s = self.match(SessionTypeParser.SEMIC)
                self.state = 205
                localctx.st = self.stype()
                localctx.type = (None if localctx.sl is None else localctx.sl.text) + (None if localctx.n is None else localctx.n.text) + (None if localctx.i is None else localctx.i.text) + (None if localctx.s is None else localctx.s.text) + (localctx.st.type if not localctx.st.type == None else "") 
                self.state = 216
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==SessionTypeParser.COMMA:
                    self.state = 207
                    localctx.c = self.match(SessionTypeParser.COMMA)
                    self.state = 208
                    localctx.n2 = self.match(SessionTypeParser.IN)
                    self.state = 209
                    localctx.i2 = self.match(SessionTypeParser.ID)
                    self.state = 210
                    localctx.s2 = self.match(SessionTypeParser.SEMIC)
                    self.state = 211
                    localctx.st2 = self.stype()
                    localctx.type += (None if localctx.c is None else localctx.c.text) + (None if localctx.n2 is None else localctx.n2.text) + (None if localctx.i2 is None else localctx.i2.text) + (None if localctx.s2 is None else localctx.s2.text) + (localctx.st2.type if not localctx.st2.type == None else "")
                    self.state = 218
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 219
                localctx.sr = self.match(SessionTypeParser.SRPAR)
                localctx.type += (None if localctx.sr is None else localctx.sr.text)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





